--- a/style.css
+++ b/style.css
@@ -5,6 +5,41 @@
   font-family: 'Trebuchet MS','Lucida Grande', sans-serif;
 }
 
+#loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color:rgba(128, 128, 128, 0.7);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#loader img {
+  width:100%;
+  max-width:10rem;
+  height: auto;
+  margin-right: 6px;
+  animation: dog-running 2s linear infinite;
+}
+
+@keyframes dog-running {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+#loader.loading-done {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1.5s ease-in-out, visibility 1.5s linear 1s;
+}
 
 nav{
   display: flex;
@@ -16,12 +51,12 @@ nav{
 
 .logo{
   display: flex;
-  align-items: center;
+  align-self: center;
 }
 
 .logo img{
   width:100%;
-  max-width:100px;
+  max-width:10vh;
   height:auto;
   object-fit: contain;
 }
@@ -33,7 +68,8 @@ span{
 nav ul li{
   list-style-type:none;
   display: inline-block;
-  padding: 10px 18px;
+  align-self: center;
+  padding: 12px 28px;
 }
 
 nav ul li a{
@@ -52,15 +88,16 @@ button{
   align-items: center;
   color: #E38B29;
   background:rgb(250, 234, 177);
-  padding: 12px 28px;
-  border-radius:26px;
+  padding: 10px 18px;
+  border-radius:22px;
   font-weight:bold;
   font-size: 14px;
+  transition: .4s;
 }
 
 button:hover{
-  transform:scale(1.1) translateY(4px);
-  transition:.4s;
+  transform:scale(1.1) translateY(2px);
+  transition:.2s;
   color:#87805E;
   cursor:pointer;
 }
