--- a/css/index.css
+++ b/css/index.css
@@ -57,22 +57,25 @@ a {
 
 .logo {
   margin: 0;
-  width: 8em;
+  width: 8rem;
 }
 
 nav {
-  padding: 20px;
+  padding: 18px;
+  box-shadow: 0 4px 8px 0 #e38b29;
 }
+
+/* sticky scroll-up */
 
 nav.sticky {
   margin: 0;
-  padding: 1px;
+  padding: 2px;
   background: #fff;
   box-shadow: 0 4px 8px 0 #e38b29;
 }
 
 nav.sticky .logo {
-  width: 4em;
+  width: 82px;
 }
 nav ul li a {
   color: #e38b29;
@@ -188,7 +191,7 @@ nav.sticky .volunter-button:hover {
   }
 }
 
-/* search  */
+/* search button */
 
 #app {
   display: -webkit-box;
@@ -257,4 +260,98 @@ label[data-state="close"] input {
   -webkit-transition: opacity 0.5s ease, width 1s ease;
   transition: opacity 0.5s ease, width 1s ease;
   -webkit-appearance: none;
+}
+
+/* footer */
+
+#end {
+  background: rgb(16, 16, 16);
+}
+body {
+  line-height: 1.5;
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+ul {
+  list-style: none;
+  display: contents;
+}
+.footer {
+  background-color: rgb(20, 18, 18);
+  padding: 30px 0;
+  padding-bottom: 30px;
+}
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-col h4 {
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+.footer-col ul li a {
+  font-size: 14px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 200;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+.footer-col ul li a:hover {
+  color: #ffffff;
+  padding-left: 8px;
+}
+.footer-col .social-links a {
+  display: inline-block;
+  height: 38px;
+  width: 38px;
+  background-color: rgb(225, 225, 225, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover {
+  color: green;
+  background-color: #ffffff;
+  transform: scale(1.3);
+}
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
+  }
 }
