--- a/css/index.css
+++ b/css/index.css
@@ -285,7 +285,7 @@ ul {
   display: contents;
 }
 .footer {
-  background-color: rgb(20, 18, 18);
+  background-color: #fff;
   padding: 30px 0;
   padding-bottom: 30px;
 }
@@ -295,7 +295,7 @@ ul {
 }
 .footer-col h4 {
   font-size: 18px;
-  color: #ffffff;
+  color: #e38b29;
   text-transform: capitalize;
   margin-bottom: 35px;
   font-weight: 500;
@@ -316,22 +316,21 @@ ul {
 .footer-col ul li a {
   font-size: 14px;
   text-transform: capitalize;
-  color: #ffffff;
   text-decoration: none;
-  font-weight: 200;
-  color: #bbbbbb;
+  font-weight: ;
+  color: #e38b29;
   display: block;
   transition: all 0.3s ease;
 }
 .footer-col ul li a:hover {
-  color: #ffffff;
+  color: rgb(250, 234, 177);
   padding-left: 8px;
 }
 .footer-col .social-links a {
   display: inline-block;
   height: 38px;
   width: 38px;
-  background-color: rgb(225, 225, 225, 0.2);
+  background-color: #e38b29;
   margin: 0 10px 10px 0;
   text-align: center;
   line-height: 40px;
@@ -340,8 +339,8 @@ ul {
   transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover {
-  color: green;
-  background-color: #ffffff;
+  color: #e38b29;
+  background-color: rgb(250, 234, 177);
   transform: scale(1.3);
 }
 @media (max-width: 767px) {
