--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
 /* Dog running */
 
 #loader {
@@ -40,7 +46,7 @@
 
 body {
   overflow-x: hidden;
-  background-color: rgb(250, 234, 177);
+  background: rgb(250, 234, 177);
 }
 
 a {
@@ -60,8 +66,75 @@ a {
   width: 6rem;
 }
 
-nav {
-  padding: 18px;
+/* search button */
+
+#app {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+}
+label {
+  position: relative;
+  display: inline-block;
+  background-color: rgb(255, 255, 255);
+  padding: 5px 12px;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  border-radius: 0;
+  box-shadow: 1px 1px 5px #e38b29;
+  border-radius: 30px;
+}
+label::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 80%;
+  background-color: #e38b29;
+  -webkit-transition: all 1s ease 0.5s;
+  transition: all 1s ease 0.5s;
+}
+label input {
+  -webkit-transition: width 1s ease, opacity 0.5s ease 0.5s;
+  transition: width 1s ease, opacity 0.5s ease 0.5s;
+  opacity: 1;
+  width: 130px;
+  height: 25px;
+  border: 0;
+  outline: none;
+  color: black;
+}
+
+label i {
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  color: #333;
+  cursor: pointer;
+}
+label[data-state="close"] {
+  border-radius: 30px;
+  padding: 5px 5px;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+label[data-state="close"]::after {
+  width: 0%;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+label[data-state="close"] i {
+  pointer-events: none;
+}
+label[data-state="close"] input {
+  width: 28px;
+  height: 25px;
+  opacity: 0;
+  cursor: pointer;
+  -webkit-transition: opacity 0.5s ease, width 1s ease;
+  transition: opacity 0.5s ease, width 1s ease;
+  -webkit-appearance: none;
 }
 
 /* modal volunteer */
@@ -158,16 +231,23 @@ nav {
 
 /* sticky scroll-up */
 
+nav {
+  padding: 18px;
+  background: rgb(250, 234, 177);
+}
+
 nav.sticky {
   margin: 0;
   padding: 2px;
   background: #fff;
   box-shadow: 0 4px 8px 0 #e38b29;
+  opacity: calc(1);
 }
 
 nav.sticky .logo {
   width: 82px;
 }
+
 nav ul li a {
   color: #e38b29;
   text-decoration: none;
@@ -282,84 +362,12 @@ nav.sticky .volunter-button:hover {
   }
 }
 
-/* search button */
-
-#app {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-}
-label {
-  position: relative;
-  display: inline-block;
-  background-color: rgb(255, 255, 255);
-  padding: 5px 12px;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-  border-radius: 0;
-  box-shadow: 1px 1px 5px #e38b29;
-  border-radius: 30px;
-}
-label::after {
-  content: "";
-  display: block;
-  height: 2px;
-  width: 80%;
-  background-color: #e38b29;
-  -webkit-transition: all 1s ease 0.5s;
-  transition: all 1s ease 0.5s;
-}
-label input {
-  -webkit-transition: width 1s ease, opacity 0.5s ease 0.5s;
-  transition: width 1s ease, opacity 0.5s ease 0.5s;
-  opacity: 1;
-  width: 130px;
-  height: 25px;
-  border: 0;
-  outline: none;
-  color: black;
-}
-
-label i {
-  position: absolute;
-  top: 11px;
-  right: 11px;
-  color: #333;
-  cursor: pointer;
-}
-label[data-state="close"] {
-  border-radius: 30px;
-  padding: 5px 5px;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-}
-label[data-state="close"]::after {
-  width: 0%;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-label[data-state="close"] i {
-  pointer-events: none;
-}
-label[data-state="close"] input {
-  width: 28px;
-  height: 25px;
-  opacity: 0;
-  cursor: pointer;
-  -webkit-transition: opacity 0.5s ease, width 1s ease;
-  transition: opacity 0.5s ease, width 1s ease;
-  -webkit-appearance: none;
-}
-
 /* wave footer */
 
 .wave-header {
   position: relative;
   width: 100%;
-  height: 100vh;
-  background: rgb(250, 234, 177);
+  height: 70vh;
   overflow: hidden;
 }
 
