--- a/css/index.css
+++ b/css/index.css
@@ -234,6 +234,7 @@ label[data-state="close"] input {
 nav {
   padding: 18px;
   background: rgb(250, 234, 177);
+  box-shadow: 0 4px 8px 0 #e38b29;
 }
 
 nav.sticky {
@@ -248,10 +249,13 @@ nav.sticky .logo {
   width: 82px;
 }
 
+/* Navbar style */
+
 nav ul li a {
   color: #e38b29;
   text-decoration: none;
   font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 
 nav ul li a:hover {
@@ -362,12 +366,35 @@ nav.sticky .volunter-button:hover {
   }
 }
 
+/* Contents of About us page */
+
+.banner {
+  width: 100%;
+  box-shadow: 0 2px 4px 0 #e38b29;
+}
+
+.about_us {
+  position: relative;
+  text-align: center;
+}
+.about_us h1 {
+  font-size: 60px;
+  font-family: "Cinzel", serif;
+  color: rgb(250, 234, 177);
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
 /* wave footer */
 
 .wave-header {
   position: relative;
   width: 100%;
-  height: 70vh;
+  height: 20vh;
   overflow: hidden;
 }
 
@@ -464,6 +491,7 @@ ul {
 }
 .footer-col h4 {
   font-size: 18px;
+  font-family: "Roboto", sans-serif;
   color: #e38b29;
   text-transform: capitalize;
   margin-bottom: 35px;
@@ -484,9 +512,10 @@ ul {
 }
 .footer-col ul li a {
   font-size: 14px;
+  font-family: "Poppins", sans-serif;
   text-transform: capitalize;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 200;
   color: #e38b29;
   display: block;
   transition: all 0.3s ease;
